--- a/pagina_inicio/gymconnect.html
+++ b/pagina_inicio/gymconnect.html
@@ -90,7 +90,7 @@
                         <p>Superintendencia de Industria y Comercio</p>
                         <p>Politicas de Privacidad</p>
                         <p>Politicas de Trataminetos de Datos</p>
-                        <p>Terminos y Condiciones</p>
+                        <p>Terminos y condicion</p>
                     </div>
             </div>
     </footer>
