se le añadio un comentario a cada archivo

--- a/pagina_inicio/form_registro_empleado.html
+++ b/pagina_inicio/form_registro_empleado.html
@@ -9,6 +9,7 @@
     <title>Formulario de Registro del Empleado</title>
 </head>
 <body>
+    <!-- titulo de la pagina -->
     <header class="container-fluid">
         <div class="row">
             <div class="col-12">
@@ -17,6 +18,7 @@
         </div>
     </header>
 
+    <!-- Formulario de registro -->
     <div class="container">
         <div class="row">
             <div class="col-12 col-lg-6 text-dark">
