--- a/pagina_inicio/form_signin_empleado.html
+++ b/pagina_inicio/form_signin_empleado.html
@@ -10,6 +10,7 @@
     <title>Inicio de Sesion Empleado</title>
 </head>
 <body>
+     <!-- card de inicio de sesion -->
     <div class="container">
         <div class="row justify-content-between">
             <div class="col-12 col-lg-5 columna2">
@@ -29,7 +30,7 @@
                             </div>
 
                             <div class="text-center">
-                                <a class="btn btn-danger mt-4 w-50" type="submit" href="#">Iniciar sesión</a>
+                                <a class="btn btn-danger mt-4 w-50" type="submit" href="../ingreso_sistema/interface_empleado.html">Iniciar sesión</a>
                             </div>
 
                             <div class="text-center mt-3">
@@ -46,6 +47,7 @@
                 </div>
             </div>
 
+            <!-- Logo y titulo de la pagina con comentario -->
             <div class="col-12 col-lg-6 columna align-self-center">
                 <img class="img-fluid mx-auto d-block img" src="img/logogym.png" alt="" width="200" height="200">
                 <h2 class="text-center mb-4">GYMCONNECT</h2>
