--- a/pagina_inicio/gymconnect.html
+++ b/pagina_inicio/gymconnect.html
@@ -20,6 +20,7 @@
                 <h2>GYMCONNECT</h2>
             </div>
 
+            <!-- sign in -->
             <div class="col col-md-2 col-lg-1 text-end">
                 <a type="button" href="#" class="btn dropdown-toggle btn-in" data-bs-toggle="dropdown">Sign in</a>
                 <ul class="dropdown-menu">
@@ -38,6 +39,7 @@
                 </ul>
             </div>
 
+            <!-- sign up -->
             <div class="col col-md-2 col-lg-1">
                 <a type="button" href="#" class="btn dropdown-toggle btn-in" data-bs-toggle="dropdown">Sign up</a>
                 <ul class="dropdown-menu">
@@ -55,6 +57,7 @@
                 </ul>
             </div>
 
+            <!-- menu dropdown header -->
             <div class="col col-md-1 col-lg-1 dropdown">
                 <button type="button" class="btn dropdown-toggle" data-bs-toggle="dropdown"><i id="menuIcon" class="fas fa-bars"></i></button>
                 <ul class="dropdown-menu">
@@ -80,7 +83,7 @@
             </div>
         </div>
 
-        <!-- form busqueda de la sede -->
+        <!-- formulario busqueda de la sede -->
         <div class="row mt-5 justify-content-center">
             <div class="col-8 col-md-6">
                 <form action="">
@@ -97,7 +100,7 @@
             </div>
         </div>
 
-        <!-- imagenes de inscribirse -->
+        <!-- imagenes del contenido del body y boton de subscribirse -->
         <div class="row">
             <div class="col-12 col-lg-4">
                 <div class="mb-5">
@@ -107,7 +110,7 @@
             </div>
 
             <div class="col-12 mb-5 col-lg-4">
-                <button class="btn btn-danger w-100 mb-4" type="button" href="#">¡Inscribete ya!</button>
+                <a class="btn btn-danger w-100 mb-4" type="button" href="form_registro_cliente.html">¡Inscribete ya!</a>
                 <img class=" mx-auto d-block rounded mt-2" src="img/suscribirse.png" alt="" width="300" height="206">
             </div>
 
@@ -184,7 +187,7 @@
                                 <a class="btn text-light" href="#" role="link">Politicas de datos personales</a>
                             </li>
                             <li class="">
-                                <a class="btn text-light" href="#" role="link">Termonis y condiciones</a>
+                                <a class="btn text-light" href="#" role="link">Terminos y condiciones</a>
                             </li>
                         </ul>
                     </div>
