--- a/pagina_inicio/form_registro_cliente.html
+++ b/pagina_inicio/form_registro_cliente.html
@@ -10,6 +10,7 @@
     <title>Formulario de Registro del Cliente</title>
 </head>
 <body>
+    <!-- titulo de la pagina -->
     <header class="container-fluid">
         <div class="row">
             <div class="col-12">
@@ -18,6 +19,7 @@
         </div>
     </header>
 
+    <!-- formulario de registro -->
     <div class="container">
         <div class="row justify-content-between text-dark">
             <div class="col-12 col-lg-6">
@@ -94,6 +96,7 @@
                 </form>
             </div>
 
+            <!-- Card de las membresias del gym -->
             <div class="col-12 col-lg-4 align-self-center">
                 <div class="card card1">
                     <div class="card-body">
