--- a/pagina_inicio/form_singin_admin.html
+++ b/pagina_inicio/form_singin_admin.html
@@ -40,7 +40,7 @@
                             <hr>
 
                             <div class="mt-4 mb-4 text-center">
-                                <a class="btn btn-primary w-50" type="link" href="../ingreso_sistema/interface_admin.html">Primer acceso</a>
+                                <a class="btn btn-primary w-50" type="link" href="form_registro_Admin.html">Primer acceso</a>
                             </div>
                         </form>
                     </div>
