--- a/ingreso_sistema/interface_admin.html
+++ b/ingreso_sistema/interface_admin.html
@@ -19,7 +19,7 @@
             </div>
 
             <!-- titulo de la pagina -->
-            <div class="col-5 col-md-8 col-lg-9">
+            <div class="col-5 col-md-7 col-lg-8 col-xl-9">
                 <h2>GYMCONNECT</h2>
             </div>
 
@@ -89,7 +89,7 @@
                                 <div id="openCollapse" class="accordion-collapse collapse show" aria-labelledby="collapseTitulo">
                                     <div class="accordion-body">
                                         <ul class="list-unstyled">
-                                            <li><a href="#" class="btn btn-sm" type="button">Ingreso por huella dactilar</a></li>
+                                            <li><a href="../ingreso_sistema/datos_biometricos.html" class="btn btn-sm" type="button">Ingreso por huella dactilar</a></li>
                                             <li><a href="#" class="btn btn-sm" type="button">Empleados</a></li>
                                             <li><a href="#" class="btn btn-sm" type="button">Clientes</a></li>
                                             <li><a href="#" class="btn btn-sm" type="button">Asistencia</a></li>
@@ -191,7 +191,7 @@
                             <h4 class="mb-4 mt-2">Asistencia</h4>
                             <div class="input-group mb-5">
                                 <input type="text" class="form-control" placeholder="Buscar cliente por nombre o cedula" aria-label="Buscar cliente por nombre o cedula" aria-describedby="button-asistencia">
-                                <a class="btn btn-outline-dark" type="button" href="#" id="button-asistencia">Button</a>
+                                <a class="btn btn-outline-dark" type="button" href="#" id="button-asistencia"><i class="fa fa-search" aria-hidden="true"></i></a>
                             </div>
                         </form>
                     </div>
@@ -219,9 +219,6 @@
             </div>
         </div>
     </div>
-
-    
-    
 
     <script>
     var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
