--- a/ingreso_sistema/interface_admin.html
+++ b/ingreso_sistema/interface_admin.html
@@ -63,9 +63,9 @@
                     <li><a class="dropdown-item" href="#">Historial de compra</a></li>
                     <li><a class="dropdown-item" href="#">Politicas de privacidad</a></li>
                     <li><a class="dropdown-item" href="#">Recomendar a tus amistades</a></li>
-                    <li><a class="dropdown-item" href="#">Salir</a></li>
-                    <li><hr class="dropdown-divider"></hr></li>
                     <li><a class="dropdown-item" href="#">Ayuda</a></li>
+                    <li><hr class="dropdown-divider"></hr></li>
+                    <li><a class="dropdown-item" href="../pagina_inicio/gymconnect.html">Cerrar sesion</a></li>
                 </ul>
             </div>
         </div>
@@ -79,9 +79,11 @@
                     <div class="card-body">
                         <h4 class="card-title mb-3 mx-4">Arley Benavides Giraldo</h4>
                         <h6 class="card-subtitle mb-5 mx-4">Administrador<img class="mx-3" src="../img/Administrador.png" alt="" width="40" height="50"></h6>
+                        <a href="../ingreso_sistema/interface_admin.html" type="button" class="btn btn-secondary mb-3"><i class="fas fa-home me-3"></i>Inicio</a>
                         <div class="accordion" id="menuInterface">
                             <div class="accordion-item">
                                 <h2 class="accordion-header" id="collapseTitulo">
+                                    <!-- boton de Administracion -->
                                     <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#openCollapse" aria-expanded="true" aria-controls="openCollapse">
                                         Administracion
                                     </button>
@@ -90,14 +92,14 @@
                                     <div class="accordion-body">
                                         <ul class="list-unstyled">
                                             <li><a href="../ingreso_sistema/datos_biometricos.html" class="btn btn-sm" type="button">Ingreso por huella dactilar</a></li>
-                                            <li><a href="#" class="btn btn-sm" type="button">Empleados</a></li>
-                                            <li><a href="#" class="btn btn-sm" type="button">Clientes</a></li>
-                                            <li><a href="#" class="btn btn-sm" type="button">Asistencia</a></li>
+                                            <li><a href="../ingreso_sistema/empleados.html" class="btn btn-sm" type="button">Empleados</a></li>
+                                            <li><a href="../ingreso_sistema/clientes.html" class="btn btn-sm" type="button">Clientes</a></li>
+                                            <li><a href="../ingreso_sistema/asistencia.html" class="btn btn-sm" type="button">Asistencia</a></li>
                                         </ul>
                                     </div>
                                 </div>
                             </div>
-    
+                            <!-- Boton de clientes -->
                             <div class="accordion-item">
                                 <h2 class="accordion-header" id="collapseTitulo1">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#openCollapse1" aria-expanded="false" aria-controls="openCollapse1">
@@ -107,14 +109,14 @@
                                 <div id="openCollapse1" class="accordion-collapse collapse" aria-labelledby="collapseTitulo1">
                                     <div class="accordion-body">
                                         <ul class="list-unstyled">
-                                            <li><a href="#" class="btn btn-sm" type="button">Clientes</a></li>
-                                            <li><a href="#" class="btn btn-sm" type="button">Evoluciones</a></li>
+                                            <li><a href="../ingreso_sistema/clientes.html" class="btn btn-sm" type="button">Clientes</a></li>
+                                            <li><a href="../ingreso_sistema/evolucion.html" class="btn btn-sm" type="button">Evoluciones</a></li>
                                         </ul>
                                     </div>
                                 </div>
                             </h2>
                             </div>
-    
+                            <!-- Boton de Pagos -->
                             <div class="accordion-item">
                                 <h2 class="accordion-header" id="collapseTitulo2">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#openCollapse2" aria-expanded="false" aria-controls="openCollapse2">
@@ -130,7 +132,7 @@
                                 </div>
                                 </h2>
                             </div>
-
+                            <!-- Boton de Produtos -->
                             <div class="accordion-item">
                                 <h2 class="accordion-header" id="collapseTitulo3">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#openCollapse3" aria-expanded="false" aria-controls="openCollapse3">
@@ -146,7 +148,7 @@
                                 </div>
                                 </h2>
                             </div>
-
+                            <!-- Boton de Reservaciones -->
                             <div class="accordion-item">
                                 <h2 class="accordion-header" id="collapseTitulo4">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#openCollapse4" aria-expanded="false" aria-controls="openCollapse4">
@@ -162,7 +164,7 @@
                                 </div>
                                 </h2>
                             </div>
-
+                            <!-- Boton de nventario -->
                             <div class="accordion-item">
                                 <h2 class="accordion-header" id="collapseTitulo5">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#openCollapse5" aria-expanded="false" aria-controls="openCollapse5">
