--- a/ingreso_sistema/datos_biometricos.html
+++ b/ingreso_sistema/datos_biometricos.html
@@ -130,7 +130,7 @@
                                 <div id="openCollapse2" class="accordion-collapse collapse" aria-labelledby="collapseTitulo2">
                                     <div class="accordion-body">
                                         <ul class="list-unstyled">
-                                            <li><a href="#" class="btn btn-sm" type="button">Ventas</a></li>
+                                            <li><a href="ventas.html" class="btn btn-sm" type="button">Ventas</a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -147,7 +147,7 @@
                                 <div id="openCollapse3" class="accordion-collapse collapse" aria-labelledby="collapseTitulo3">
                                     <div class="accordion-body">
                                         <ul class="list-unstyled">
-                                            <li><a href="#" class="btn btn-sm" type="button">Membresias</a></li>
+                                            <li><a href="membresia.html" class="btn btn-sm" type="button">Membresias</a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -164,7 +164,7 @@
                                 <div id="openCollapse4" class="accordion-collapse collapse" aria-labelledby="collapseTitulo4">
                                     <div class="accordion-body">
                                         <ul class="list-unstyled">
-                                            <li><a href="#" class="btn btn-sm" type="button">Clases</a></li>
+                                            <li><a href="form_reservaciones.html" class="btn btn-sm" type="button">Clases</a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -181,7 +181,7 @@
                                 <div id="openCollapse5" class="accordion-collapse collapse" aria-labelledby="collapseTitulo5">
                                     <div class="accordion-body">
                                         <ul class="list-unstyled">
-                                            <li><a href="#" class="btn btn-sm" type="button">Inventario</a></li>
+                                            <li><a href="inventario.html" class="btn btn-sm" type="button">Inventario</a></li>
                                         </ul>
                                     </div>
                                 </div>
