--- a/ingreso_sistema/membresia.html
+++ b/ingreso_sistema/membresia.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <link rel="stylesheet" href="../css/interface.css">
     
-    <title>Datos del Cliente</title>
+    <title>Membresias</title>
 </head>
 <body>
     <!-- header de la pagina -->
@@ -80,11 +80,10 @@
                         <h4 class="card-title mb-3 mx-4">Arley Benavides Giraldo</h4>
                         <h6 class="card-subtitle mb-5 mx-4">Administrador<img class="mx-3" src="../img/Administrador.png" alt="" width="40" height="50"></h6>
                         <a href="../ingreso_sistema/interface_admin.html" type="button" class="btn btn-secondary mb-3"><i class="fas fa-home me-3"></i>Inicio</a>
-
                         <div class="accordion" id="menuInterface">
                             <div class="accordion-item">
                                 <h2 class="accordion-header" id="collapseTitulo">
-                                    <!-- Boton de Administracion -->
+                                    <!-- boton de Administracion -->
                                     <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#openCollapse" aria-expanded="true" aria-controls="openCollapse">
                                         Administracion
                                     </button>
@@ -165,7 +164,7 @@
                                 </div>
                                 </h2>
                             </div>
-                             <!-- Boton de nventario -->   
+                            <!-- Boton de nventario -->
                             <div class="accordion-item">
                                 <h2 class="accordion-header" id="collapseTitulo5">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#openCollapse5" aria-expanded="false" aria-controls="openCollapse5">
@@ -186,52 +185,35 @@
                 </div>   
             </div>
 
-            <!-- card del buscador del cliente para el registro de datos biometricos -->
+            <!-- card del buscador de membresia -->
             <div class="col-12 col-lg-6 offset-lg-1 mt-3 mb-3 text-center">
                 <div class="card card-search">
                     <div class="card-body">
                         <form action="">
-                            <h4 class="mb-4 mt-2">Registro Clientes</h4>
+                            <h4 class="mb-4 mt-2">Membresia</h4>
                             <div class="input-group mb-5">
-                                <input type="text" class="form-control" placeholder="Buscar cliente por nombre o cedula" aria-label="Buscar cliente por nombre o cedula" aria-describedby="button-biometrico">
-                                <a class="btn btn-outline-dark" type="button" href="#" id="button-biometrico"><i class="fa fa-search" aria-hidden="true"></i></a>
+                                <input type="text" class="form-control" placeholder="Buscar cliente por nombre o cedula" aria-label="Buscar cliente por nombre o cedula" aria-describedby="button-membresia">
+                                <a class="btn btn-outline-dark" type="button" href="#" id="button-membresia"><i class="fa fa-search" aria-hidden="true"></i></a>
                             </div>
                         </form>
                     </div>
                 </div>
 
-                <!-- lista de los datos del Empleado -->
-             <div class="card card-cliente mt-3">
-                <div class="card-body">
-                    <h5 class="card-title mb-3 mt-3">Cliente</h5>
-                    <img class="" src="../img/img-datos-cliente.png" alt="" width="100" height="100">
-                    <a href="#" class="btn w-100 text-primary" type="button" id="btn-foto">Tomar foto</a>
-                    <ul class="list-unstyled text-start mt-5 mx-5">
-                        <h6><li>Datos del usuario:</li></h6>
-                        <li class="mb-2">id_cliente: 001</li>
-                        <li class="mb-2">Nombre del usuario: Francisco Romero Castro</li>
-                        <li class="mb-2">Identificacion: CC 1124526321</li>
-                        <li class="mb-2">Fecha de nacimiento: 19/05/1995</li>
-                        <li class="mb-2">Celular: 3177477308</li>
-                        <li class="mb-2">Correo electronico: abenagil456@gmail.com</li>
-                        <li class="mb-2">Fecha inscripcion: 20/03/2024</li>
-                        <li class="mb-2">Fecha finalizacion: 20/04/2024</li>
-                        <li class="mb-2">Estado: Inactivo</li>
-                        <hr>
-                    </ul>
-
-                    <!-- Botones inferiores -->
-                    <div class="row mt-5">
-                        <div class="col-4">
-                            <a href="../pagina_inicio/form_registro_cliente.html" type="button" class="btn btn-primary" id="button1">Actualizar datos</a> 
-                        </div>
-
-                        <div class="col-4">
-                             <a href="../pagina_inicio/form_registro_cliente.html" type="button" class="btn btn-success" id="button2">Registrar nuevo Cliente</a>
-                        </div>
-        
-                        <div class="col-4 mb-5">
-                            <button type="submit" class="btn btn-danger" id="button3">Eliminar cliente</button>
+                <!-- lista de los datos de un cliente -->
+                <div class="card card-cliente mt-3">
+                    <div class="card-body">
+                        <h5 class="card-title mb-3 mt-3">Cliente</h5>
+                        <img src="../img/img-datos-cliente.png" alt="" width="100" height="100">
+                        <ul class="list-unstyled text-start mt-5 mx-5">
+                            <h6><li>Datos del usuario:</li></h6>
+                            <li class="mb-2">Nombre del usuario: Francisco Romero Castro</li>
+                            <li class="mb-2">Identificacion: CC 1124526321</li>
+                            <li class="mb-2">Fecha inscripcion: 20/03/2024</li>
+                            <li class="mb-2">Fecha finalizacion: 20/04/2024</li>
+                            <li class="mb-2">Estado: Inactivo</li>
+                        </ul>
+                        <div class="mt-5 mb-4">
+                            <a type="button" class="btn btn-primary mx-5 me-5 mb-3 w-50" id="button-membresia" href="form_membresia.html">Actualizar membresia</a>
                         </div>
                     </div>
                 </div>
