--- a/pagina_inicio/form_registro_cliente.html
+++ b/pagina_inicio/form_registro_cliente.html
@@ -161,12 +161,13 @@
                             </div>
 
                             <div class="text-center mt-4 mb-4">
-                                <a href="#" class="btn btn btn-primary w-50">Pagar</a>
+                                <a href="../ingreso_sistema/ventas.html" class="btn btn btn-primary w-50">Pagar</a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+            <!-- Boton de registro -->
             <div class="col-12 offset-2 col-md-12 offset-md-3 col-lg-6 offset-lg-1 mb-5 mt-5">
                 <button class="btn btn-danger " id="registro" type="submit">Registrarme</button>
             </div>
